--- a/YCompiler/YCompiler.vcxproj.filters
+++ b/YCompiler/YCompiler.vcxproj.filters
@@ -72,9 +72,6 @@
     <ClCompile Include="src\semantics\symbol_table.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\semantics\checker.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\common.h">
@@ -143,10 +140,10 @@
     <ClInclude Include="src\semantics\scope.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\semantics\checker.h">
+    <ClInclude Include="src\semantics\symbol_table.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\semantics\symbol_table.h">
+    <ClInclude Include="src\semantics\decl_checker.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
